--- a/styles/style.css
+++ b/styles/style.css
@@ -28,3 +28,15 @@ footer {
     padding: 10px;
     text-align: center;
 }
+
+#image-section {
+    text-align: center;
+}
+
+#band-image {
+    width: 100%; /* This will make the image full-width */
+    max-width: 800px; /* You can adjust this to control the maximum width */
+    height: auto; /* This maintains the aspect ratio */
+    display: block;
+    margin: 0 auto; /* Centers the image horizontally */
+}
