--- a/styles/style.css
+++ b/styles/style.css
@@ -40,8 +40,14 @@ footer a {
     text-decoration: none; /* Removes the underline */
 }
 
-footer a:hover {
-    text-decoration: underline; /* Adds underline when hovering */
+.fab {
+    font-size: 20px; /* Adjust the size */
+    color: #0099cc; /* Adjust the color */
+    margin-right: 10px; /* Add some space between the icons */
+}
+
+footer a:hover .fab {
+    color: #006699; /* Change color on hover */
 }
 
 #home-link {
