--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ header {
 }
 
 header h1 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Rock Salt', sans-serif;
     /* Additional styling as needed */
 }
 
