--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ header {
     color: white;
     padding: 20px;
     text-align: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Rock Salt', sans-serif;
 }
 
 header h1 {
