--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ footer {
 }
 
 footer a {
-    color: #0099cc; /* Color for links */
+    color: white; /* Color for links */
     text-decoration: none; /* Removes the underline */
 }
 
