--- a/styles/style.css
+++ b/styles/style.css
@@ -86,3 +86,31 @@ footer a {
 .navbar {
     background-color: #282c34 !important;
 }
+
+.band-members {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.member {
+    width: 45%;
+    margin-bottom: 20px;
+}
+
+.member img {
+    width: 100%;
+    height: 300px;
+    /* Adjust this value to set the desired height */
+    object-fit: cover;
+    /* This will keep the aspect ratio while covering the entire container */
+    border-radius: 10px;
+}
+
+/* Mobile view */
+@media screen and (max-width: 768px) {
+    .member {
+        width: 100%;
+    }
+}
