--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ footer a {
 
 .member img {
     width: 100%;
-    height: 300px;
+    height: 100%;
     /* Adjust this value to set the desired height */
     object-fit: cover;
     /* This will keep the aspect ratio while covering the entire container */
@@ -114,3 +114,56 @@ footer a {
         width: 100%;
     }
 }
+
+  .container {
+    max-width: 800px;
+    margin: auto;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 20px 0;
+  }
+  
+  .bio-image, .bio-text {
+    width: 50%;
+    margin: 10px;
+  }
+  
+  .bio-image img {
+    width: 100%;
+    border-radius: 10px;
+  }
+  
+  .left {
+    order: 1;
+  }
+  
+  .right {
+    order: 2;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .bio-image, .bio-text {
+      width: 100%;
+    }
+  
+    .right {
+      order: 1;
+    }
+  
+    .left {
+      order: 2;
+    }
+  }
+  
+  .band-member-image {
+    border-radius: 25px; /* or any other value that suits your design */
+    padding-bottom: 10px;
+  }
+  
+  
+  
+  
