--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Rock Salt', cursive !important;
+    font-family: 'Barlow Condensed', cursive !important;
     margin: 0;
     padding: 0;
 }
@@ -9,11 +9,11 @@ header {
     color: white;
     padding: 20px;
     text-align: center;
-    font-family: 'Rock Salt', cursive !important;
+    font-family: 'Barlow Condensed', cursive !important;
 }
 
 header h1 {
-    font-family: 'Rock Salt', cursive !important;
+    font-family: 'Barlow Condensed', cursive !important;
     /* Additional styling as needed */
 }
 
@@ -22,6 +22,10 @@ nav a {
     color: white;
     text-decoration: none;
 }
+
+.navbar-nav .nav-link {
+    font-size: 24px; /* You can adjust the size as needed */
+  }
 
 section {
     padding: 20px;
