--- a/styles/style.css
+++ b/styles/style.css
@@ -54,19 +54,16 @@ footer a {
 }
 
 #image-section {
-    text-align: center;
-}
-
-#home-main-img {
     width: 100%;
-    /* This will make the image full-width */
-    height: auto;
-    /* This maintains the aspect ratio */
-    display: block;
-    margin: 0 auto;
-    /* Centers the image horizontally */
-    max-width: 100%;
-}
+    padding: 0;
+    margin: 0;
+  }
+  
+  #home-main-img {
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Remove any space below the image */
+  }
 
 .fab {
     font-size: 30px;
