--- a/styles/style.css
+++ b/styles/style.css
@@ -178,3 +178,21 @@ footer a {
     font-size: 20px;
     text-decoration: none;
 }
+
+#galleryCarousel {
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    z-index: 2;
+    height: 90%;
+    /* Ensure that the controls are above the other content, but not the video controls */
+}
+
+.carousel-item video {
+    position: relative;
+    z-index: 1;
+    /* Ensure that the video controls are above the other content but below the carousel controls */
+}
