--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,8 @@ nav a {
 
 .navbar-nav .nav-link {
     font-size: 24px;
-    /* You can adjust the size as needed */
+    justify-content: center;
+    width: 100%;
 }
 
 section {
@@ -199,4 +200,64 @@ footer a {
 #thumbnailGrid img {
     max-width: 100%;
     height: auto;
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    width: 75px;
+    /* Adjust the size as needed */
+    margin-right: 10px;
+}
+
+#home-link h1 {
+    font-family: 'Alegreya SC', serif;
+    /* Apply the Alegreya SC font */
+    margin: 0;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.mobile-logo-container {
+    display: none;
+}
+
+.logo-container h1 {
+    font-family: 'Alegreya SC', serif !important;
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .header-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .logo-container {
+        display: none;
+        /* Hide the centered logo and text on mobile */
+    }
+
+    .navbar-toggler {
+        margin-left: 10px;
+        /* Adjust as needed */
+    }
+
+    .mobile-logo-container {
+        display: flex;
+        align-items: center;
+    }
+
+    .mobile-logo-container h1 {
+        font-family: 'Alegreya SC', serif !important;
+        margin: 0;
+    }
 }
