--- a/styles/style.css
+++ b/styles/style.css
@@ -300,3 +300,11 @@ footer a {
     transform: translateX(0);
     transition: all 1s ease-out;
 }
+
+.logo-container h1,
+.mobile-logo-container h1 {
+    font-size: 50px;
+    /* You can adjust this size to your liking */
+    margin: 0;
+    /* This removes any default margin */
+}
